# fastapi-boilerplate

./: .env_db  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  env_db.example  pyproject.toml  requirements.txt
src/: __main__.py  config.py
src/adapters/controllers/: auth.py  bearer.py  depends.py  exceptions.py  routers.py  users.py
src/adapters/repositories/: users.py
src/core/dto/: tokens.py  users.py
src/core/exceptions/: auth.py  base.py  error.py  users.py
src/core/services/: auth.py  users.py
src/infrastructure/alembic/: env.py
src/infrastructure/alembic/versions/: deb6c3c544b9_init.py
src/infrastructure/database/: session.py
src/infrastructure/database/models/: __init__.py  base.py  users.py
src/utils/: uow.py
